.kube/production.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lroux-production
  labels:
    name: lroux-production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lroux-deployment
  namespace: lroux-production
  labels:
    app: lroux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lroux
  template:
    metadata:
      labels:
        app: lroux
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: lroux-api
          image: "ghcr.io/laelian-r/server-minecraft:0.0.7"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "128m"
              memory: "256Mi"
            limits:
              cpu: "512m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
---
# RESSOURCE
apiVersion: v1
kind: Service
metadata:
  name: lroux-service
  namespace: lroux-production
  labels:
    app: lroux
spec:
  type: ClusterIP
  selector:
    app: lroux
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
---
# INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lroux-ingress
  namespace: lroux-production
spec:
  rules:
    - http:
        paths:
          - path: /lroux
            pathType: Prefix
            backend:
              service:
                name: lroux-service
                port:
                  number: 80
